# capitalize-project

./: README.md  pyproject.toml
.github/workflows/: hello.yml
capitalize_package/: capitalize.py  reverse.py
tests/: assert_capitalize.py  test_capitalize.py  test_reverse.py
tests/fixtures/: input.txt  output.txt
